# traceguard

./: .gitignore  .mcp.json  CLAUDE.md  INTEGRATING.md  README.md  TRACEGUARD_DESIGN.md  TRACEGUARD_ROADMAP.md  TRACEGUARD_SPEC.md  collect_traces.py  import_latest.py  import_traces.py  main.py  market_intel_export.json  pyproject.toml  real_traces_export.json
.claude/skills/: guardian-check.md  guardian-status.md  guardian-suggest.md
.github/workflows/: ci.yml
configs/examples/: market_intel.yaml  tcm_extraction.yaml
consumers/: huadian.md
docs/: POSITIONING.md  Pipeline_Guardian_Specification.html  RELEASING.md  SPEC.md  contamination-case-study.md  contamination-case-study.zh.md  loop-integration.md  pipeline-guardian.md
examples/: README.md  anthropic_call.py  contamination_case_study.py  loop_self_contamination.py  manual_span.py  model_anachronism.py  openai_call.py  otel_console_export.py  prompt_drift.py  training_contamination.py
guardian/: __init__.py  cli.py  env.py  mcp_server.py
scripts/: analyze_pipeline.py  collect_traces.py  debug_llm.py  import_latest.py  import_traces.py  seed_demo_data.py
templates/: FEEDBACK_TEMPLATE.md  PROJECT_INTEGRATION_TEMPLATE.md
tests/: test_alert.py  test_check_registry.py  test_cli.py  test_config.py  test_degraded_suggest.py  test_drift.py  test_env.py  test_flag_type.py  test_guardian_node.py  test_mcp_server.py  test_public_api.py  test_reader.py  test_reverse_calc.py  test_root_cause.py  test_semantic.py  test_server.py  test_step.py  test_store.py  test_structural.py  test_suggestion.py
(+42 files in other folders)
