[project]
name = "pipeline-guardian"
version = "0.1.0"
description = "Self-healing AI workflow system — generic quality assurance for multi-agent LLM pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.20",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn>=0.34",
]

[project.scripts]
guardian = "guardian.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["guardian"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
